Back-port fixes modal shifting the page (#757)

--- a/src/main/resources/static/scss/components/_modals.scss
+++ b/src/main/resources/static/scss/components/_modals.scss
@@ -1,6 +1,5 @@
 .modal-open .modal {
-    overflow-y: hidden;
-    overflow-x: hidden;
+    overflow: hidden;
 
     @include media-breakpoint(max-portrait-phone) {
         overflow-y: auto;
